# report-sending-tool

./: .gitignore  README.md  ReportSendingTool.spec  contacts.json  draft.json  main.py  pyproject.toml
modules/: contacts_manager.py  draft_manager.py  file_scanner.py  outlook_sender.py
ui/: contacts_window.py  draft_window.py  main_window.py  settings_window.py
